<resources>
    <string name="app_name">Tillion</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="user_name">username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="expected_avg_income">What’s your expected avg. income</string>
    <string name="save">save</string>
    <string name="target_name">Target Name</string>
    <string name="target_price">Target Price</string>
    <string name="categories">Categories:</string>
    <string name="add_target">Add Target</string>
    <string name="need_to_save_per_month">Need to save per month</string>
    <string name="you_don_t_have_target_yest_start_by_adding_one">You don\'t have target yest! start by adding one.
    </string>
    <string name="savings">Savings</string>
    <string name="target">Target</string>
    <string name="boost">BOOST</string>
    <string name="offers">Offers</string>
    <string name="saved">SAVED</string>
    <string name="remaining">Remaining</string>
    <string name="boost_from_people">Boost From People</string>
    <string name="boost_your_target_from_your_friends_on_tillion_or_not">Boost your target from your friends on Tillion
        or not
    </string>
    <string name="lets_go">lets go</string>
    <string name="title_activity_boost">BoostActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
