<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".target.TargetDetailsActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/targetDetailsToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Toolbar"
            app:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
            app:layout_constraintTop_toBottomOf="@id/targetDetailsToolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/targetNameTextView"
            tools:text="asd asd "
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <ProgressBar
            android:id="@+id/targetProgress"
            android:layout_marginTop="10dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            app:layout_constraintTop_toBottomOf="@id/targetNameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:maxHeight="10dip"
            android:minHeight="10dip"
            android:progress="0"
            android:secondaryProgress="100"
            android:progressDrawable="@drawable/progress_limit"/>


    <TextView
            android:id="@+id/savingsLabelTextView"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/targetProgress"
            android:text="@string/savings"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/savingsTextView"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="@id/savingsLabelTextView"
            style="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintTop_toBottomOf="@id/savingsLabelTextView"
            android:text="@string/savings"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/targetPriceLabelTextView"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/targetProgress"
            android:text="@string/target"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/targetPriceTextView"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/targetPriceLabelTextView"
            style="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintTop_toBottomOf="@id/targetPriceLabelTextView"
            android:text="@string/savings"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"/>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/boostButton"
            android:layout_width="wrap_content"
            android:text="@string/boost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/savingsTextView"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/offerLabelTextView"
            android:text="@string/offers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toBottomOf="@+id/boostButton"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/offersRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/offerLabelTextView"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>