<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTargetActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/addTargetToolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Toolbar"
            app:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addTargetToolbar" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/targetNameEditText"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:lines="1"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
            android:id="@+id/categoryTextView"
            android:text="@string/categories"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"/>


    <co.ceryle.radiorealbutton.RadioRealButtonGroup
            android:id="@+id/categoriesRadioGroup"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@id/categoryTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            app:rrbg_animateDrawables_enter="overshoot"
            app:rrbg_animateTexts_enter="overshoot"
            app:rrbg_dividerColor="@color/colorPrimary"
            app:rrbg_dividerSize="1dp"
            app:rrbg_radius="10dp"
            app:rrbg_selectorColor="#aaa333"
            app:rrbg_selectorSize="6dp">

        <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@mipmap/ic_launcher"
                app:rrb_drawableHeight="36dp"
                app:rrb_drawablePadding="8dp"
                app:rrb_drawableWidth="36dp"/>
        <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@mipmap/ic_launcher_round"
                app:rrb_drawableHeight="36dp"
                app:rrb_drawablePadding="8dp"
                app:rrb_drawableWidth="36dp"/>

        <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@mipmap/ic_launcher"
                app:rrb_drawableHeight="36dp"
                app:rrb_drawablePadding="8dp"
                app:rrb_drawableWidth="36dp"/>

        <co.ceryle.radiorealbutton.RadioRealButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:rrb_drawable="@mipmap/ic_launcher"
                app:rrb_drawableHeight="36dp"
                app:rrb_drawablePadding="8dp"
                app:rrb_drawableWidth="36dp"/>


    </co.ceryle.radiorealbutton.RadioRealButtonGroup>


    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target_price"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:id="@+id/targetPriceTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/categoriesRadioGroup">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/targetPriceEditText"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:lines="1"
                android:inputType="number"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView android:id="@+id/needToSavePerMonthLabelTextView"
              android:text="@string/need_to_save_per_month"
              android:layout_width="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/targetPriceTextInputLayout"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="32dp"
              android:layout_height="wrap_content" android:layout_marginStart="24dp"/>


    <TextView android:id="@+id/needToSavePerMonthAmountTextView"
              android:text="500$"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@+id/needToSavePerMonthLabelTextView"
              app:layout_constraintBottom_toBottomOf="@+id/needToSavePerMonthLabelTextView"
              app:layout_constraintStart_toEndOf="@+id/needToSavePerMonthLabelTextView"
              android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"/>


    <com.xw.repo.BubbleSeekBar
            android:id="@+id/targetSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_marginTop="32dp"
            android:layout_height="wrap_content"
            app:bsb_max="12"
            app:bsb_min="1"
            app:layout_constraintTop_toBottomOf="@id/needToSavePerMonthAmountTextView"
            app:bsb_progress="6"
            app:bsb_second_track_color="@color/colorPrimary"
            app:bsb_section_count="12"
            app:bsb_auto_adjust_section_mark="true"
            app:bsb_section_text_position="bottom_sides"
            app:bsb_show_progress_in_float="true"
            app:bsb_show_section_mark="true"
            app:bsb_show_section_text="false"
            app:bsb_show_thumb_text="false"
            app:bsb_track_color="@color/colorAccent" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>


    <TextView android:id="@+id/targetAchievementLabelTextView"
              android:text="@string/need_to_save_per_month"
              android:layout_width="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/targetSeekBar"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="32dp"
              android:layout_height="16dp"
              android:layout_marginStart="24dp"/>


    <TextView android:id="@+id/targetAchievementTextView"
              android:text="12"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="@+id/targetAchievementLabelTextView"
              app:layout_constraintBottom_toBottomOf="@+id/targetAchievementLabelTextView"
              app:layout_constraintStart_toEndOf="@+id/targetAchievementLabelTextView"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.button.MaterialButton
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:text="@string/add_target"
            android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>